--- a/app/src/main/res/layout/item_listview_userbuying.xml
+++ b/app/src/main/res/layout/item_listview_userbuying.xml
@@ -4,63 +4,6 @@
     android:layout_height="108.0dip">
 
     <LinearLayout
-        android:id="@+id/fl_goods_actions"
-        android:layout_width="80.0dip"
-        android:layout_height="fill_parent"
-        android:layout_gravity="right"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/tv_goods_edit"
-            android:layout_width="fill_parent"
-            android:layout_height="0.0dip"
-            android:layout_weight="1.0"
-            android:background="@color/main_red"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="18.0dip"
-                android:layout_height="wrap_content"
-                android:src="@drawable/edit_white" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5.0dip"
-                android:text="编辑"
-                android:textColor="@color/main_white"
-                android:textSize="@dimen/font_big" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/tv_goods_delete"
-            android:layout_width="fill_parent"
-            android:layout_height="0.0dip"
-            android:layout_weight="1.0"
-            android:background="@color/main_gray"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="18.0dip"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delete_white" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5.0dip"
-                android:text="删除"
-                android:textColor="@color/main_white"
-                android:textSize="@dimen/font_big" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/item_content"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/main_white"
@@ -87,7 +30,7 @@
                 android:textSize="@dimen/font_big" />
 
             <TextView
-                android:id="@+id/tv_goods_price"
+                android:id="@+id/tv_goods_want_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥900"
