--- a/app/src/main/res/layout/activity_goodssellinginfo.xml
+++ b/app/src/main/res/layout/activity_goodssellinginfo.xml
@@ -146,161 +146,161 @@
                                 android:src="@drawable/discount_one" />
                         </FrameLayout>
 
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/main_white"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal"
-                            android:padding="10.0dip">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="fill_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:background="@color/main_white"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:orientation="horizontal"-->
+                            <!--android:padding="10.0dip">-->
 
-                            <FrameLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                            <!--<FrameLayout-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content">-->
 
-                                <ImageView
-                                    android:layout_width="32.0dip"
-                                    android:layout_height="32.0dip"
-                                    android:layout_marginBottom="4.0dip"
-                                    android:src="@color/main_red"
-                                     />
+                                <!--<ImageView-->
+                                    <!--android:layout_width="32.0dip"-->
+                                    <!--android:layout_height="32.0dip"-->
+                                    <!--android:layout_marginBottom="4.0dip"-->
+                                    <!--android:src="@color/main_red"-->
+                                     <!--/>-->
 
-                                <ImageView
-                                    android:id="@+id/iv_goods_header"
-                                    android:layout_width="30.0dip"
-                                    android:layout_height="30.0dip"
-                                    android:layout_margin="1.0dip"
-                                    android:src="@drawable/header_default"
-                                     />
+                                <!--<ImageView-->
+                                    <!--android:id="@+id/iv_goods_header"-->
+                                    <!--android:layout_width="30.0dip"-->
+                                    <!--android:layout_height="30.0dip"-->
+                                    <!--android:layout_margin="1.0dip"-->
+                                    <!--android:src="@drawable/header_default"-->
+                                     <!--/>-->
 
-                                <ImageView
-                                    android:id="@+id/iv_goods_auth"
-                                    android:layout_width="29.0dip"
-                                    android:layout_height="20.0dip"
-                                    android:layout_gravity="bottom"
-                                    android:src="@drawable/userinfo_auth"
-                                    android:visibility="visible" />
-                            </FrameLayout>
+                                <!--<ImageView-->
+                                    <!--android:id="@+id/iv_goods_auth"-->
+                                    <!--android:layout_width="29.0dip"-->
+                                    <!--android:layout_height="20.0dip"-->
+                                    <!--android:layout_gravity="bottom"-->
+                                    <!--android:src="@drawable/userinfo_auth"-->
+                                    <!--android:visibility="visible" />-->
+                            <!--</FrameLayout>-->
 
-                            <LinearLayout
-                                android:layout_width="0.0dip"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8.0dip"
-                                android:layout_weight="1.0"
-                                android:gravity="bottom"
-                                android:orientation="vertical">
+                            <!--<LinearLayout-->
+                                <!--android:layout_width="0.0dip"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginLeft="8.0dip"-->
+                                <!--android:layout_weight="1.0"-->
+                                <!--android:gravity="bottom"-->
+                                <!--android:orientation="vertical">-->
 
-                                <TextView
-                                    android:id="@+id/tv_goods_username"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="wrap_content"
-                                    android:singleLine="true"
-                                    android:text="隔壁老王"
-                                    android:textColor="@color/main_blackgray"
-                                    android:textSize="@dimen/font_middle" />
+                                <!--<TextView-->
+                                    <!--android:id="@+id/tv_goods_username"-->
+                                    <!--android:layout_width="fill_parent"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:singleLine="true"-->
+                                    <!--android:text="隔壁老王"-->
+                                    <!--android:textColor="@color/main_blackgray"-->
+                                    <!--android:textSize="@dimen/font_middle" />-->
 
-                                <TextView
-                                    android:id="@+id/goodssellinginfo_dist"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="5.0dip"
-                                    android:gravity="right"
-                                    android:singleLine="true"
-                                    android:text="海淀区"
-                                    android:textColor="@color/main_gray"
-                                    android:textSize="@dimen/font_middlesmall" />
-                            </LinearLayout>
+                                <!--<TextView-->
+                                    <!--android:id="@+id/goodssellinginfo_dist"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_marginTop="5.0dip"-->
+                                    <!--android:gravity="right"-->
+                                    <!--android:singleLine="true"-->
+                                    <!--android:text="海淀区"-->
+                                    <!--android:textColor="@color/main_gray"-->
+                                    <!--android:textSize="@dimen/font_middlesmall" />-->
+                            <!--</LinearLayout>-->
 
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:gravity="bottom|center|right"
-                                android:orientation="vertical">
+                            <!--<LinearLayout-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="fill_parent"-->
+                                <!--android:gravity="bottom|center|right"-->
+                                <!--android:orientation="vertical">-->
 
-                                <TextView
-                                    android:id="@+id/tv_goods_price"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="￥99999"
-                                    android:textColor="@color/main_red"
-                                    android:textSize="@dimen/font_middle" />
+                                <!--<TextView-->
+                                    <!--android:id="@+id/tv_goods_price"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:text="￥99999"-->
+                                    <!--android:textColor="@color/main_red"-->
+                                    <!--android:textSize="@dimen/font_middle" />-->
 
-                                <TextView
-                                    android:id="@+id/goodssellinginfo_oprice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="2.0dip"
-                                    android:text="原价：10000"
-                                    android:textColor="@color/main_gray"
-                                    android:textSize="@dimen/font_middlesmall"
-                                    android:visibility="gone" />
-                            </LinearLayout>
-                        </LinearLayout>
+                                <!--<TextView-->
+                                    <!--android:id="@+id/goodssellinginfo_oprice"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_marginTop="2.0dip"-->
+                                    <!--android:text="原价：10000"-->
+                                    <!--android:textColor="@color/main_gray"-->
+                                    <!--android:textSize="@dimen/font_middlesmall"-->
+                                    <!--android:visibility="gone" />-->
+                            <!--</LinearLayout>-->
+                        <!--</LinearLayout>-->
 
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/main_white"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal"
-                            android:paddingBottom="10.0dip"
-                            android:paddingLeft="10.0dip"
-                            android:paddingRight="10.0dip">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="fill_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:background="@color/main_white"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:orientation="horizontal"-->
+                            <!--android:paddingBottom="10.0dip"-->
+                            <!--android:paddingLeft="10.0dip"-->
+                            <!--android:paddingRight="10.0dip">-->
 
-                            <TextView
-                                android:id="@+id/goodsselling_browse"
-                                android:layout_width="0.0dip"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1.0"
-                                android:text="浏览次数：104"
-                                android:textColor="@color/main_gray"
-                                android:textSize="@dimen/font_middle" />
+                            <!--<TextView-->
+                                <!--android:id="@+id/goodsselling_browse"-->
+                                <!--android:layout_width="0.0dip"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_weight="1.0"-->
+                                <!--android:text="浏览次数：104"-->
+                                <!--android:textColor="@color/main_gray"-->
+                                <!--android:textSize="@dimen/font_middle" />-->
 
-                            <include layout="@layout/goods_label" />
-                        </LinearLayout>
+                            <!--<include layout="@layout/goods_label" />-->
+                        <!--</LinearLayout>-->
 
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="1.0dip"
-                            android:background="@color/main_white"
-                            android:orientation="vertical"
-                            android:padding="10.0dip">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="fill_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginTop="1.0dip"-->
+                            <!--android:background="@color/main_white"-->
+                            <!--android:orientation="vertical"-->
+                            <!--android:padding="10.0dip">-->
 
-                            <LinearLayout
-                                android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                            <!--<LinearLayout-->
+                                <!--android:layout_width="fill_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:orientation="horizontal">-->
 
-                                <TextView
-                                    android:id="@+id/tv_goods_name"
-                                    android:layout_width="0.0dip"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1.0"
-                                    android:singleLine="true"
-                                    android:text="出售小米手机"
-                                    android:textColor="@color/main_red"
-                                    android:textSize="@dimen/font_middle" />
+                                <!--<TextView-->
+                                    <!--android:id="@+id/tv_goods_name"-->
+                                    <!--android:layout_width="0.0dip"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:layout_weight="1.0"-->
+                                    <!--android:singleLine="true"-->
+                                    <!--android:text="出售小米手机"-->
+                                    <!--android:textColor="@color/main_red"-->
+                                    <!--android:textSize="@dimen/font_middle" />-->
 
-                                <TextView
-                                    android:id="@+id/goodssellinginfo_time"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:singleLine="true"
-                                    android:text="5分钟"
-                                    android:textColor="@color/main_gray"
-                                    android:textSize="@dimen/font_middlesmall" />
-                            </LinearLayout>
+                                <!--<TextView-->
+                                    <!--android:id="@+id/goodssellinginfo_time"-->
+                                    <!--android:layout_width="wrap_content"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:singleLine="true"-->
+                                    <!--android:text="5分钟"-->
+                                    <!--android:textColor="@color/main_gray"-->
+                                    <!--android:textSize="@dimen/font_middlesmall" />-->
+                            <!--</LinearLayout>-->
 
-                            <TextView
-                                android:id="@+id/tv_goods_content"
-                                android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="8.0dip"
-                                android:text="content"
-                                android:textColor="@color/main_gray"
-                                android:textSize="@dimen/font_middlesmall" />
-                        </LinearLayout>
+                            <!--<TextView-->
+                                <!--android:id="@+id/tv_goods_content"-->
+                                <!--android:layout_width="fill_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginTop="8.0dip"-->
+                                <!--android:text="content"-->
+                                <!--android:textColor="@color/main_gray"-->
+                                <!--android:textSize="@dimen/font_middlesmall" />-->
+                        <!--</LinearLayout>-->
 
                         <LinearLayout
                             android:id="@+id/goodsselling_weekly"
